crates/seesaw/tests/compile_fail/filter_extract_exclusive.stderr
error: filter and extract are mutually exclusive (both consume the filter type-state slot)
  --> tests/compile_fail/filter_extract_exclusive.rs:25:1
   |
25 | #[handler(on = MyEvent, filter = my_filter, extract(id), id = "bad")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `handler` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `anyhow::Result`
 --> tests/compile_fail/filter_extract_exclusive.rs:1:5
  |
1 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
